# C-Data-Structures-and-Algorithms

./: .gitignore  CMakeLists.txt  README.md
dynamic_array/: vector.c
hash_table/: hash_table.c
linked_list_intrusive/: linked_list.c
linked_list_non_intrusive/: linked_list.c
stack/dynamic_array/: stack.c
stack/linked_list_non_intrusive/: stack.c
